update_data_yml to automate refresh

--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -22,8 +22,11 @@ jobs:
         run: |
           pip install requests beautifulsoup4 pandas
 
+      - name: Debug - List repository files
+        run: ls -R  # Lists all files to confirm script location
+
       - name: Run data update script
-        run: python Money_Puck_Data.py  # Change to your script filename
+        run: python moneypuck_data/Money_Puck_Data.py  # Adjusted path
 
       - name: Commit and Push Changes
         run: |
