--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -25,8 +25,11 @@ jobs:
       - name: Debug - List repository files
         run: ls -R  # Lists all files to check script location
 
+      # Step 2: Navigate to the correct directory before running the script
       - name: Run data update script
-        run: python moneypuck_data/Money_Puck_Data.py  # Updated path
+        run: |
+          cd moneypuck_data  # Move into the correct directory
+          python Money_Puck_Data.py  # Run the script
 
       - name: Commit and Push Changes
         run: |
@@ -35,3 +38,4 @@ jobs:
           git add data/skaters_data_24-25.csv
           git commit -m "Updated skaters data"
           git push
+
