--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -23,7 +23,7 @@ jobs:
           pip install requests beautifulsoup4 pandas
 
       - name: Debug - List repository files
-        run: ls -R  # Lists all files to check script location
+        run: ls -R Money_Puck_Data  # Lists all files to check script location
 
       - name: Run data update script
         run: python Money_Puck_Data/Money_Puck_Data.py  # Updated path
