--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git add data/skaters_data_24-25.csv
+          git add data/24-25_skaters_data.csv
           git commit -m "Updated skaters data" || echo "No changes to commit"
           git push
