--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -30,9 +30,12 @@ jobs:
         working-directory: ${{ github.workspace }}
 
       - name: Commit and Push Changes
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add data/24-25_skaters_data.csv
+          git config --global user.email "github-actions@github.com"
+          git add data/skaters_data_24-25.csv
           git commit -m "Updated skaters data" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${GH_TOKEN}@github.com/willcote15/Money_Puck_Data.git
+
